--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,14 @@ dependencies:
   provider: ^6.0.5
   flutter_screenutil: ^5.9.0
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  http: ^1.1.0
+  flutter_secure_storage: ^9.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
+  build_runner: ^2.3.3
+  hive_generator: ^2.0.0
   flutter_test:
     sdk: flutter
 
